<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:fitsSystemWindows="true"
        tools:context=".auth.AccountActivity">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo"/>

            <EditText
                    android:id="@+id/old_email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/field_background"
                    android:drawablePadding="1dp"
                    android:drawableStart="@drawable/ic_email"
                    android:ems="10"
                    android:padding="10dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

            <EditText
                    android:id="@+id/new_email"
                    android:hint="@string/hint_new_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/field_background"
                    android:drawablePadding="1dp"
                    android:drawableStart="@drawable/ic_email"
                    android:ems="10"
                    android:padding="10dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

            <EditText
                    android:id="@+id/password"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeActionId="13"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/field_background"
                    android:drawablePadding="1dp"
                    android:drawableStart="@drawable/ic_password"
                    android:ems="10"
                    android:padding="10dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

            <EditText
                    android:id="@+id/newPassword"
                    android:focusableInTouchMode="true"
                    android:hint="@string/new_pass"
                    android:imeActionId="13"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/field_background"
                    android:drawablePadding="1dp"
                    android:drawableStart="@drawable/ic_password"
                    android:ems="10"
                    android:padding="10dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/changeEmail"
                    style="?android:textAppearanceSmall"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_change"
                    android:textStyle="bold"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            <Button
                    android:id="@+id/changePass"
                    style="?android:textAppearanceSmall"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_button"
                    android:text="@string/btn_change"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/send"
                    style="?android:textAppearanceSmall"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_send"
                    android:textStyle="bold"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"/>

            <Button
                    android:id="@+id/remove"
                    style="?android:textAppearanceSmall"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_remove"
                    android:textStyle="bold"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/change_email_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_email"
                    android:background="@drawable/button_background"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/change_password_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_password"
                    android:background="@drawable/button_background"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/sending_pass_reset_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/send_password_reset_email"
                    android:background="@drawable/button_background"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/remove_user_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/remove_user"
                    android:background="@drawable/button_background"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/back_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_back"
                    android:textColor="@android:color/white"
                    android:background="@drawable/back_button"
                    android:textStyle="bold"/>



        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>