<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/app_background"
        tools:context=".auth.SignupActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_centerInParent="true"
                  android:layout_margin="20dp"
                  android:orientation="vertical">

        <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/hint_color"
                    android:background="@drawable/field_background"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_email"
                    android:ems="10"
                    android:padding="10dp"
                    android:textSize="21sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/password"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/field_background"
                    android:drawablePadding="1dp"
                    android:drawableStart="@drawable/ic_password"
                    android:ems="10"
                    android:padding="10dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="21sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/sign_up_button"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

</android.support.constraint.ConstraintLayout>